2003-09-01  Dominique Devriese  <devriese@kde.org>

	* remove the defective operator| and operator& implementations for
	the Objects class
	
2003-08-31  Dominique Devriese  <devriese@kde.org>

	* make the Kig Python Scripting API docs only available online.
	It's too much trouble to generate them during the build process,
	and I can't add a hard build-time dependency on doxygen anyway...

	* keep the Kig version number in a central place, so that it can
	easily be changed.  Use some autoconf magic to fill it in in the
	other places..

2003-08-25  Dominique Devriese  <devriese@kde.org>

	* update the configure.in.* files and remove
	README.boost-python1.30-gcc3.2 and boost-python1.30-gcc3.2.patch
	because distributing a Boost.Python patch with Kig is really
	stupid, and because the Debian packagers have already applied the
	patch in their version of Boost.Python, and so should the other
	distro's.  Seems I need to thank Ben Burton for suggesting to the
	Debian packagers to apply the patch.

	* fix a wrong "lib not found error" in configure.in.in by removing
	-pedantic from CXXFLAGS while trying to compile.

2003-08-15  Dominique Devriese  <devriese@kde.org>

	* improve the inline documentation in order to improve the doxygen
	generated docs for the python scripting API.

2003-08-03  Dominique Devriese  <devriese@kde.org>

	* give Transformation::apply better semantics

2003-07-27  Dominique Devriese  <devriese@kde.org>

	* add a warning to configure.in.bot about how Boost.Python 1.30
	together with GCC 3.2+ is a bad combination, along with a patch.

	* add documentation about attaching text labels and locuses to the
	index.docbook file

2003-07-23  Dominique Devriese  <devriese@kde.org>

	* add a nifty python scripting example that shows the graph of a
	sine curve, but can in fact be used to show any function's graph
	you would come up with.  It uses python scripting and the locus
	facility in a clever way to do this.  In fact, I stole the idea